# karmendes_etl

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.sh
src/etl/: demo.yaml  etl.py  factory.py  logger.py  runner.py  utils.py
src/etl/components/extractors/databases/: extractor_pandas.py  extractor_postgres.py
src/etl/components/extractors/disk/: extractor_json.py
src/etl/components/extractors/http/: extractor_http.py
src/etl/components/loaders/aws/: s3.py
src/etl/components/loaders/disk/: json.py
src/etl/components/loaders/pandas/: loader_pandas_sql.py
src/etl/components/transformers/: python_transformers.py
src/etl/handlers/api/: requester.py
