[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etl"
version = "0.1.0"
description = "Personal Package to build etls"
authors = [
    { name="Karmendes", email="lucaseqt@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text="MIT" }
dependencies = [
    "PyYAML",
    "termcolor",
    "retry-requests",
    "pandas",
    "SQLAlchemy"
]

[project.urls]
Homepage = "https://github.com/Karmendes/karmendes_etl"

[tool.setuptools.packages.find]
where = ["src"]
